--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,7 @@
 @import "tailwindcss";
+@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Overpass+Mono:wght@300;400;500;600;700&display=swap');
+
 
 @theme {
   --font-sans: var(--font-geist-sans);
@@ -6,6 +9,8 @@
 }
 
 :root {
+  --font-title: 'Lexend', sans-serif;
+  --font-paragraph: 'Overpass Mono', monospace;
   --background: #ffffff;
   --foreground: #171717;
 }
@@ -18,7 +23,30 @@
 }
 
 body {
+  /* font-family: "Poppins", sans-serif; Change from Inter to Poppins */
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+}
+
+.section-title {
+  font-family: var(--font-title);
+  font-weight: 800; /* Adjust as needed */
+  font-size: 3rem;
+}
+
+.project-title {
+  font-family: var(--font-title);
+  font-weight: 700; /* Adjust as needed */
+  font-size: 1.5rem;
+}
+
+p {
+  font-family: var(--font-paragraph);
+  font-size: var(--font-r-s); /* Adjust as needed */
+  letter-spacing: 0;
+}
+
+
+html {
+  scroll-behavior: smooth;
 }
